--- a/Container0517.html
+++ b/Container0517.html
@@ -8,9 +8,25 @@
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/5.1.3/pixi.min.js"></script> -->
   </head>
   <body>
-    <script src="./js/pixi.min.js"></script>
+    <script src="./js/pixi.js"></script>
 
-    <script>
+    <script type="module">
+      // import { Loader } from "./js/pixi.js";
+      let loader = new PIXI.Loader
+
+      // const loader = Loader.shared; // Loader.shared內建的單例loader
+      // const loader = new Loader(); // 也可以使用自定義的loader
+
+      loader
+        .add("bili", "http://pic.deepred5.com/bilibili.jpg")
+        .add("avatar", "http://anata.me/img/avatar.jpg")
+        .load();
+
+      // 監聽載入事件
+      loader.onProgress.add((loader) => {
+        console.log(loader.progress);
+      });
+
       const app = new PIXI.Application({
         width: 600,
         height: 600,
@@ -28,7 +44,7 @@
       const smallPeople = PIXI.Texture.from("./img/scareCat.png");
 
       const SmallPeople = new PIXI.Sprite(smallPeople);
-      SmallPeople.anchor.set(0.5);
+      // SmallPeople.anchor.set(0.5);
       container.addChild(SmallPeople);
 
       // Create a 5x5 grid of bunnies
@@ -41,22 +57,21 @@
       // }
 
       // Move container to the center
-      container.x = app.screen.width / 2;
-      container.y = app.screen.height / 2;
+      // container.x = app.screen.width / 2;
+      // container.y = app.screen.height / 2;
 
       // Center bunny sprite in local container coordinates
-      container.pivot.x = container.width / 2;
-      container.pivot.y = container.height / 2;
+      // container.pivot.x = container.width / 2;
+      // container.pivot.y = container.height / 2;
 
       // Listen for animate update
       app.ticker.add((delta) => {
         // rotate the container!
         // use delta to create frame-independent transform
-        container.rotation += 0.03 * delta;
-        container.y += 0.5 * delta;
-        container.x += 0.5 * delta;
+        // container.rotation += 0.03 * delta;
+        // container.y += 0.5 * delta;
+        // container.x += 0.5 * delta;
       });
-
     </script>
   </body>
 </html>
